// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile az portrait medium 1`] = `
<Link
  linkStyle={
    Object {
      "borderBottomColor": "#DBDBDB",
      "borderBottomWidth": 1,
      "flex": 1,
      "marginHorizontal": -30,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    fill={true}
    style={
      Object {
        "width": "100%",
      }
    }
    uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 50,
        "paddingVertical": 20,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        hide={false}
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 40,
          "fontWeight": "normal",
          "includeFontPadding": false,
          "lineHeight": 40,
          "marginBottom": 10,
          "marginHorizontal": 30,
          "textAlign": "center",
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile az portrait wide 1`] = `
<Link
  linkStyle={
    Object {
      "borderBottomColor": "#DBDBDB",
      "borderBottomWidth": 1,
      "flex": 1,
      "marginHorizontal": -50,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    fill={true}
    style={
      Object {
        "width": "100%",
      }
    }
    uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 140,
        "paddingVertical": 20,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        hide={false}
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 45,
          "fontWeight": "normal",
          "includeFontPadding": false,
          "lineHeight": 45,
          "marginBottom": 10,
          "marginHorizontal": 50,
          "textAlign": "center",
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;
